--- a/backend/task-management/docker-compose.yaml
+++ b/backend/task-management/docker-compose.yaml
@@ -1,12 +1,14 @@
+version: '3.8'
+
 services:
   database:
     image: mysql:8
     container_name: database
     environment:
-      MYSQL_ROOT_PASSWORD: root # Senha do usuário root
-      MYSQL_DATABASE: task # Nome do banco de dados inicial
-      MYSQL_USER: quantum # Nome do usuário do banco de dados
-      MYSQL_PASSWORD: quantum # Senha do usuário do banco de dados
+      MYSQL_ROOT_PASSWORD: quantum
+      MYSQL_DATABASE: kanban
+      MYSQL_USER: quantum
+      MYSQL_PASSWORD: quantum
     ports:
       - "3306:3306"
     volumes:
